<resources>
    <string name="app_name">StoryApp</string>
    <string name="must_not_empty">Tidak boleh kosong</string>
    <string name="type_email_not_valid">Format email tidak valid</string>
    <string name="input_password_description">Masukkan kata sandi</string>
    <string name="input_name_description">Nama lengkap harus diisi</string>
    <string name="more_than_six_character">Kata sandi wajib lebih dari 6</string>
    <string name="silahkan_masuk">Silahkan Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="buat_akun_baru">Buat akun baru</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="input_email_description">Masukkan alamat email</string>
    <string name="keluar">Keluar</string>
    <string name="tambah_story">Tambah Story</string>
    <string name="gambar_story">Gambar story</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="data_tidak_tersedia">Data tidak tersedia</string>
    <string name="failed_login">Permintaan Masuk Gagal</string>
    <string name="kamera">Kamera</string>
    <string name="galeri">Galeri</string>
    <string name="description_alert_logout">Yakin ingin keluar?</string>
    <string name="empty_image">Silahkan masukkan berkas gambar terlebih dahulu</string>
    <string name="logo_aplikasi">Logo Aplikasi</string>
    <string name="title_activity_maps">Peta</string>
    <string name="peta">Peta</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satelit</string>
    <string name="timeout">Timeout</string>
    <string name="muat_ulang">Muat Ulang</string>
    <string name="simpan">SIMPAN</string>
</resources>